# token-efficiency-scorer

./: .gitignore  CURRENT_STATE.md  PLAN.md  README.md  pyproject.toml  spec.md
config/: p25_refs.yaml
data/: README.md  batch_jobs.jsonl  cost-log.jsonl  judge_scores.jsonl  judge_scores_v1.jsonl  llm_provisional_ratings.jsonl  objective_proxy.jsonl
data/batch_requests/: 20260528T183502Z.jsonl
data/gold/: sample.json
data/ood-corpus/: ood_evaluation.json  ood_manifest.jsonl
data/validation-corpus/: corpus_manifest.jsonl  skipped.jsonl
research/: 01-sota-scan.md  02-trajectory-waste.md  03-validation-corpus.md  04-phaseA1-remeasure.md  05-architecture-pivot.md  06-calibration.md  cleanup-backlog.md
scripts/: 00_download_corpus.py  01_annotate_corpus.py  02_validate_heuristics.py  02b_generate_structural_gt.py  03_task_taxonomy.py  04_difficulty_analysis.py  05_download_ood_traces.py  05b_download_ood_fast.py  06_evaluate_ood.py  07_sample_spotcheck_turns.py  08_apply_spotcheck_labels.py  09_compute_spotcheck_iaa.py  10_remeasure_heuristics.py  calibration.py  debug_apikey.py  debug_ccbench.py  debug_ccbench2.py  debug_ccbench3.py  debug_ccbench4.py  debug_ccbench5.py  debug_corpus_audit.py  debug_roles.py  debug_schema.py  debug_schema2.py  debug_schema3.py  debug_schema4.py  debug_stats.py  debug_taxonomy.py  debug_tooluse.py  debug_verify.py  layer2_judge.py  llm_rater.py  objective_proxy.py  rating_interface.py  run_layer1.py  score.py
src/token_efficiency/: layer1_features.py  trace_digest.py
tests/: test_layer1.py
(+628 files in other folders)
