[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-efficiency-scorer"
version = "0.1.0"
description = "Token-efficiency scoring for coding agents: outcome quality / (tokens_used × difficulty_norm) vs counterfactual baseline"
authors = [{ name = "Gaurav Gandhi", email = "gaurav.gandhi2411@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing -v"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
